--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "postcss": "^8.3.11",
     "vue-loader": "^16.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "markdown-it": "^14.1.0"
+  }
 }
